[project]
name = "rtregistrationcalc"
version = "0.2.0"
description = "Tools to calculate the IEC61217 Table Top corrections from SRO, RTSS for in room volumetric image, and RT Ion Plan"
authors = [
    {name = "Stuart Swerdloff", email = "sjswerdloff@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydicom >=2.3.1",
    "numpy >= 1.23.3"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
